<resources>
    <string name="app_name" translatable="false">COJ Mobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_faq">FAQ</string>
    <string name="action_login">Login</string>
    <string name="action_filter">Filter</string>
    <string name="caribbean_online_judge" translatable="false">Caribbean Online Judge</string>
    <string name="thinking_better" translatable="false">Thinking better!!</string>
    <string name="profile">Profile</string>
    <string name="archive">24 hour archive</string>
    <string name="contests">Real contests</string>
    <string name="view_profile">View profile</string>
    <string name="edit_account">Edit account</string>
    <string name="mail">Mail</string>
    <string name="problemItems">Problems</string>
    <string name="judgments">Judgments</string>
    <string name="standings">Standings</string>
    <string name="compare_users">Compare users</string>
    <string name="coming">Coming</string>
    <string name="running">Running</string>
    <string name="previous">Previous</string>
    <string name="must_logged_in">Must be logged in</string>
    <string name="empty_recipient">Empty recipient</string>
    <string name="empty_fields_short">Empty fields</string>
    <string name="empty_fields">Empty fields. Send it anyway?</string>
    <string name="empty_fields_error">Message or subject must not be empty</string>
    <string name="send_ok">Sent successful</string>
    <string name="delete_ok">Successful deleted</string>
    <string name="send_error">Error sending message</string>
    <string name="delete_error">Error while deleting</string>
    <string name="send">Send</string>
    <string name="test">"Test "</string>
    <string name="date">Date</string>
    <string name="prob">Prob</string>
    <string name="problem_id">Problem ID</string>
    <string name="source_code">Source code</string>
    <string name="judgment">Judgment</string>
    <string name="time">Time</string>
    <string name="mem">Mem</string>
    <string name="size">Size</string>
    <string name="lang">Lang</string>
    <string name="id">ID</string>
    <string name="title">Title</string>
    <string name="sub">Sub</string>
    <string name="ac">AC</string>
    <string name="ac_percent">AC%</string>
    <string name="score">Score</string>
    <string name="country">Country</string>
    <string name="nick_name">Nickname</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="email">E-mail</string>
    <string name="favorite_language">Favorite language</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="reply">Reply</string>
    <string name="reply_all">Reply to all</string>
    <string name="forward">Forward</string>
    <string name="delete">Delete</string>
    <string name="rank">Rank</string>
    <string name="user">User</string>
    <string name="users">Users</string>
    <string name="institution">Institution</string>
    <string name="description">Description</string>
    <string name="input_specification">Input specification</string>
    <string name="output_specification">Output specification</string>
    <string name="sample_input">Sample input</string>
    <string name="sample_output">Sample output</string>
    <string name="hints">Hint(s)</string>
    <string name="recommendation">Recommendation</string>
    <string name="error_institutions">Error getting institutions</string>
    <string name="update_error">Error updating profile</string>
    <string name="entry_error">Error sending entry</string>
    <string name="submit_error">Error sending solution</string>
    <string name="submit_successful">Send successful solution</string>
    <string name="entry_successful">Entry added successful</string>
    <string name="entry_empty">Empty entry</string>
    <string name="update_successful">Successful profile update</string>
    <string name="user_invalid">Invalid user. Please check again!</string>
    <string name="solved_only">"Problems solved only by "</string>
    <string name="solved_both">Problems solved by both</string>
    <string name="tried_only">"Problems tried only by "</string>
    <string name="tried_both">Problems tried by both</string>
    <string name="compare">Compare</string>
    <string name="access">Access</string>
    <string name="contest_name">Contest name</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="inbox">Inbox</string>
    <string name="sent">Sent</string>
    <string name="drafts">Drafts</string>
    <string name="submit">Submit</string>
    <string name="best_solutions">Best Solutions</string>
    <string name="send_mail">Send mail</string>
    <string name="save_draft">Save draft</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="close">Close</string>
    <string name="close_question">Close the application?</string>
    <string name="from">From</string>
    <string name="send_to">To</string>
    <string name="send_to_large">To (User1;User2)</string>
    <string name="to">To:</string>
    <string name="subject">Subject</string>
    <string name="mail_example">Put your text here</string>
    <string name="title_activity_login">Sign in</string>
    <string name="saved">Problem saved</string>
    <string name="deleted">Deleted problem </string>
    <string name="off_line_mode">Off line</string>
    <string name="no_more_problems">No more problems to load</string>
    <string name="no_more_judgments">No more judgments to load</string>
    <string name="no_more_users">No more users</string>
    <string name="no_matches">No matches</string>
    <string name="compare_error">Error getting profiles</string>
    <string name="problem_list_error">Error getting the problem list</string>
    <string name="judgment_list_error">Error getting the judgment list</string>
    <string name="standing_list_error">Error getting the standings</string>
    <string name="contest_list_error">Error getting the contests</string>
    <string name="no_contest_error">No contest</string>
    <string name="problem_error">Error getting the problem</string>
    <string name="image_error">Images load failed</string>
    <string name="profile_error">Error accessing the profile</string>
    <string name="entries_error">Error getting the entries</string>
    <string name="no_more_entries_error">No more entries to load</string>
    <string name="faq_error">Error occurred getting FAQs</string>
    <string name="no_faq_error">No FAQs to load</string>
    <string name="recommendation_large">We have carefully selected several similar problems for you:</string>
    <string name="reload">Reload</string>
    <string name="loading">Loading..</string>
    <string name="problem_filter">Problems filter</string>
    <string name="judgment_filter">Judgments filter</string>
    <string name="faq">Frequently asked questions (FAQ)</string>
    <string name="statistics">Statistics</string>
    <string name="created_by">Created by</string>
    <string name="added_by">Added by</string>
    <string name="limits">Limits</string>
    <string name="languages">Languages</string>
    <string name="available_in">Available in</string>
    <string name="total_time">"Total Time: "</string>
    <string name="test_time">"Test Time: "</string>
    <string name="memory">"Memory: "</string>
    <string name="output">"Output: "</string>
    <string name="size_">"Size: "</string>
    <string name="filter_title">Title, description or ID</string>
    <string name="filter_complexity">Complexity</string>
    <string name="filter_classification">Classification</string>
    <string name="ad_hoc">Ad-Hoc</string>
    <string name="arithmetic_algebra">Arithmetic-Algebra</string>
    <string name="brute_force">Brute Force</string>
    <string name="combination">Combination</string>
    <string name="data_structure">Data Structures</string>
    <string name="dynamic_programming">Dynamic Programming</string>
    <string name="game_theory">Game Theory</string>
    <string name="geometry">Geometry</string>
    <string name="graph_theory">Graph Theory</string>
    <string name="greedy">Greedy</string>
    <string name="number_theory">Number Theory</string>
    <string name="sorting_searching">Sorting-Searching</string>
    <string name="strings">Strings</string>
    <string name="filter">Filter</string>
    <string name="we_should_know">Is there something we should know?</string>
    <string name="create">Create</string>
    <string name="upload">Upload file</string>
    <string name="edit">Edit</string>
    <string name="reset">Reset</string>
    <string name="all">All</string>
    <string name="solved">Solved</string>
    <string name="unsolved">Unsolved</string>
    <string name="untried">Untried</string>
    <string name="favorite">Favorite</string>
    <string name="recommended">Recommended</string>
    <string name="connection_error_uppercase">CONNECTION ERROR</string>
    <string name="overall_data">Overall data</string>
    <string name="specific_rules">Specific rules</string>
    <string name="contest_type">Contest type:</string>
    <string name="contestant_type">Contestant type:</string>
    <string name="access_type">Access type:</string>
    <string name="registration_type">Registration type:</string>
    <string name="template_virtual">Template to virtual contest:</string>
    <string name="penalty_each_rejected">Penalty by each rejected submission:</string>
    <string name="frozen_time">Frozen time (time remaining with frozen standings):</string>
    <string name="dead_time">Dead time (time remaining without judgments):</string>
    <string name="programming_language">Programming languages:</string>
    <string name="show_problems_all">Show problems to all:</string>
    <string name="show_judgment_contestants">Show judgments to the contestants:</string>
    <string name="show_judgments_all">Show judgments to all:</string>
    <string name="show_standings_contestants">Show standings to the contestants:</string>
    <string name="show_standings_all">Show standings to all:</string>
    <string name="show_statistics_contestants">Show statistics to the contestants:</string>
    <string name="show_statistics_all">Show statistics to all:</string>
    <string name="gold_medals">Gold medals:</string>
    <string name="silver_medals">Silver medals:</string>
    <string name="bronze_medals">Bronze medals:</string>
    <string name="prompt_user">User</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register"><u>Register</u></string>
    <string name="action_forgot_password"><u>Forgot password?</u></string>
    <string name="empty_username">Empty username</string>
    <string name="short_username">Username too short</string>
    <string name="empty_password">Empty password</string>
    <string name="short_password">Password too short</string>
    <string name="login_failed">Login failed </string>
    <string name="user_passwd_error">Invalid user or password</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_off_line_main">OffLineMainActivity</string>
    <string name="title_activity_profile">Profile</string>
    <string name="server_preference">Server preferences</string>
    <string name="update_database">Update database</string>
</resources>