<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item android:id="@+id/action_faq"
        android:title="@string/action_faq"
        app:showAsAction="never" />

    <item android:id="@+id/action_login"
        android:title="@string/action_login"
        android:visible="true"
        app:showAsAction="never" />

    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:visible="false"
        app:showAsAction="never" />

    <item android:id="@+id/server_settings"
        android:title="@string/server_preference"
        app:showAsAction="never" />

    <item android:id="@+id/update_database"
        android:title="@string/update_database"
        android:visible="false"
        app:showAsAction="never" />
</menu>
