<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/connection_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <include layout="@layout/connection_error" />

    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/submit_nested_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/problem_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/problem_id"/>

        <Spinner
            android:id="@+id/language_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/file_path"
                android:layout_weight="75"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/source_code"/>

            <Button
                android:id="@+id/upload_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_button_rounded"
                android:padding="@dimen/padding"
                android:text="@string/upload"
                android:textColor="@color/white" />

        </LinearLayout>

        <EditText
            android:layout_weight="100"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/source_code_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="30" />

                <Button
                    android:id="@+id/submit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:background="@drawable/layout_button_rounded"
                    android:text="@string/submit"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/reset"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_weight="30"
                    android:background="@drawable/layout_button_rounded"
                    android:text="@string/reset"
                    android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
